// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractLines > should extract lines and not add ellipsis on first and last line 1`] = `
"Line 1
// ...
Line 4
Line 5
Line 6
// ...
Line 10"
`;

exports[`extractLines > should extract lines by range 1`] = `
"...
Line 2
Line 3
Line 4
..."
`;

exports[`extractLines > should extract lines with custom ellipsis 1`] = `
"Line 1
// ...
Line 4
Line 5
Line 6
// ...
Line 8
// ..."
`;

exports[`extractLines > should extract lines with gaps 1`] = `
"Line 1
...
Line 4
Line 5
Line 6
...
Line 8
..."
`;

exports[`extractLines > should extract lines with no ellipsis 1`] = `
"Line 1
Line 4
Line 5
Line 6
Line 8"
`;

exports[`extractLines > should return full content 1`] = `
"Line 1
Line 2
Line 3
Line 4
Line 5
Line 6
Line 7
Line 8
Line 9
Line 10"
`;

exports[`getMarkdown > should get markdown for single use template 1`] = `
{
  "content": "# Single Use Template

TEST

Hi!
",
  "data": {},
}
`;

exports[`getMarkdown > should get markdown from template 1`] = `
{
  "content": "
Example use of a template.
",
  "data": {
    "name": "Use Template1 with YAML",
  },
}
`;

exports[`getMarkdown > should get markdown from template for index 1`] = `
{
  "content": "
Example use of a template.
",
  "data": {
    "name": "Use Template1 with YAML",
  },
}
`;

exports[`list > should get references 1`] = `
[
  {
    "extension": ".md",
    "folder": "glossary",
    "markdown": {
      "content": "",
      "data": {
        "name": "OOP",
      },
    },
    "name": "oop",
    "path": {
      "absolute": "single-hyperbook/glossary/oop.md",
      "directory": "",
      "href": "/glossary/oop",
      "relative": "oop.md",
    },
    "references": [
      {
        "extension": ".md",
        "folder": "book",
        "markdown": {
          "content": "
:t[OOP]{#oop}
",
          "data": {
            "name": "Paradigms",
          },
        },
        "name": "paradigms",
        "path": {
          "absolute": "single-hyperbook/book/paradigms.md",
          "directory": "",
          "href": "/paradigms",
          "relative": "paradigms.md",
        },
        "root": "single-hyperbook",
      },
    ],
    "root": "single-hyperbook",
  },
]
`;

exports[`list > should list all 1`] = `
[
  {
    "extension": ".md",
    "folder": "glossary",
    "markdown": {
      "content": "",
      "data": {
        "name": "OOP",
      },
    },
    "name": "oop",
    "path": {
      "absolute": "single-hyperbook/glossary/oop.md",
      "directory": "",
      "href": "/glossary/oop",
      "relative": "oop.md",
    },
    "references": [
      {
        "extension": ".md",
        "folder": "book",
        "markdown": {
          "content": "
:t[OOP]{#oop}
",
          "data": {
            "name": "Paradigms",
          },
        },
        "name": "paradigms",
        "path": {
          "absolute": "single-hyperbook/book/paradigms.md",
          "directory": "",
          "href": "/paradigms",
          "relative": "paradigms.md",
        },
        "root": "single-hyperbook",
      },
    ],
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "
:t[OOP]{#oop}
",
      "data": {
        "name": "Paradigms",
      },
    },
    "name": "paradigms",
    "path": {
      "absolute": "single-hyperbook/book/paradigms.md",
      "directory": "",
      "href": "/paradigms",
      "relative": "paradigms.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "name": "Home",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".json",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {},
    },
    "name": "empty",
    "path": {
      "absolute": "single-hyperbook/book/subsection/empty.json",
      "directory": "subsection",
      "href": "/subsection/empty",
      "relative": "subsection/empty.json",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".json",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {},
    },
    "name": "invalid",
    "path": {
      "absolute": "single-hyperbook/book/subsection/invalid.json",
      "directory": "subsection",
      "href": "/subsection/invalid",
      "relative": "subsection/invalid.json",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "use-template1",
    "path": {
      "absolute": "single-hyperbook/book/subsection/use-template1.yml",
      "directory": "subsection",
      "href": "/subsection/use-template1",
      "relative": "subsection/use-template1.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "virtual": true,
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection/index.md",
      "directory": "subsection",
      "href": "/subsection",
      "relative": "subsection/index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "
# Test
",
      "data": {
        "name": "Test",
      },
    },
    "name": "test",
    "path": {
      "absolute": "single-hyperbook/book/subsection2/test.md",
      "directory": "subsection2",
      "href": "/subsection2/test",
      "relative": "subsection2/test.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection2/index.yml",
      "directory": "subsection2",
      "href": "/subsection2",
      "relative": "subsection2/index.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md.hbs",
    "folder": "book",
    "markdown": {
      "content": "# Single Use Template

TEST

Hi!
",
      "data": {},
    },
    "name": "single-template",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/single-template.md.hbs",
      "directory": "subsection3",
      "href": "/subsection3/single-template",
      "relative": "subsection3/single-template.md.hbs",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/index.yml",
      "directory": "subsection3",
      "href": "/subsection3",
      "relative": "subsection3/index.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "name": "Test",
      },
    },
    "name": "test",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/subsection31/test.md",
      "directory": "subsection3/subsection31",
      "href": "/subsection3/subsection31/test",
      "relative": "subsection3/subsection31/test.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "
:t[OOP]{#oop}
",
      "data": {
        "name": "Paradigms",
      },
    },
    "name": "paradigms",
    "path": {
      "absolute": "single-hyperbook/book/paradigms.md",
      "directory": "",
      "href": "/paradigms",
      "relative": "paradigms.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "name": "Home",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".json",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {},
    },
    "name": "empty",
    "path": {
      "absolute": "single-hyperbook/book/subsection/empty.json",
      "directory": "subsection",
      "href": "/subsection/empty",
      "relative": "subsection/empty.json",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".json",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {},
    },
    "name": "invalid",
    "path": {
      "absolute": "single-hyperbook/book/subsection/invalid.json",
      "directory": "subsection",
      "href": "/subsection/invalid",
      "relative": "subsection/invalid.json",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "use-template1",
    "path": {
      "absolute": "single-hyperbook/book/subsection/use-template1.yml",
      "directory": "subsection",
      "href": "/subsection/use-template1",
      "relative": "subsection/use-template1.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "virtual": true,
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection/index.md",
      "directory": "subsection",
      "href": "/subsection",
      "relative": "subsection/index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "
# Test
",
      "data": {
        "name": "Test",
      },
    },
    "name": "test",
    "path": {
      "absolute": "single-hyperbook/book/subsection2/test.md",
      "directory": "subsection2",
      "href": "/subsection2/test",
      "relative": "subsection2/test.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection2/index.yml",
      "directory": "subsection2",
      "href": "/subsection2",
      "relative": "subsection2/index.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md.hbs",
    "folder": "book",
    "markdown": {
      "content": "# Single Use Template

TEST

Hi!
",
      "data": {},
    },
    "name": "single-template",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/single-template.md.hbs",
      "directory": "subsection3",
      "href": "/subsection3/single-template",
      "relative": "subsection3/single-template.md.hbs",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/index.yml",
      "directory": "subsection3",
      "href": "/subsection3",
      "relative": "subsection3/index.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "name": "Test",
      },
    },
    "name": "test",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/subsection31/test.md",
      "directory": "subsection3/subsection31",
      "href": "/subsection3/subsection31/test",
      "relative": "subsection3/subsection31/test.md",
    },
    "root": "single-hyperbook",
  },
]
`;

exports[`list > should list for folder book 1`] = `
[
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "
:t[OOP]{#oop}
",
      "data": {
        "name": "Paradigms",
      },
    },
    "name": "paradigms",
    "path": {
      "absolute": "single-hyperbook/book/paradigms.md",
      "directory": "",
      "href": "/paradigms",
      "relative": "paradigms.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "name": "Home",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".json",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {},
    },
    "name": "empty",
    "path": {
      "absolute": "single-hyperbook/book/subsection/empty.json",
      "directory": "subsection",
      "href": "/subsection/empty",
      "relative": "subsection/empty.json",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".json",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {},
    },
    "name": "invalid",
    "path": {
      "absolute": "single-hyperbook/book/subsection/invalid.json",
      "directory": "subsection",
      "href": "/subsection/invalid",
      "relative": "subsection/invalid.json",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "use-template1",
    "path": {
      "absolute": "single-hyperbook/book/subsection/use-template1.yml",
      "directory": "subsection",
      "href": "/subsection/use-template1",
      "relative": "subsection/use-template1.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "virtual": true,
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection/index.md",
      "directory": "subsection",
      "href": "/subsection",
      "relative": "subsection/index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "
# Test
",
      "data": {
        "name": "Test",
      },
    },
    "name": "test",
    "path": {
      "absolute": "single-hyperbook/book/subsection2/test.md",
      "directory": "subsection2",
      "href": "/subsection2/test",
      "relative": "subsection2/test.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection2/index.yml",
      "directory": "subsection2",
      "href": "/subsection2",
      "relative": "subsection2/index.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md.hbs",
    "folder": "book",
    "markdown": {
      "content": "# Single Use Template

TEST

Hi!
",
      "data": {},
    },
    "name": "single-template",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/single-template.md.hbs",
      "directory": "subsection3",
      "href": "/subsection3/single-template",
      "relative": "subsection3/single-template.md.hbs",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "markdown": {
      "content": "
Example use of a template.
",
      "data": {
        "name": "Use Template1 with YAML",
      },
    },
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/index.yml",
      "directory": "subsection3",
      "href": "/subsection3",
      "relative": "subsection3/index.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "markdown": {
      "content": "",
      "data": {
        "name": "Test",
      },
    },
    "name": "test",
    "path": {
      "absolute": "single-hyperbook/book/subsection3/subsection31/test.md",
      "directory": "subsection3/subsection31",
      "href": "/subsection3/subsection31/test",
      "relative": "subsection3/subsection31/test.md",
    },
    "root": "single-hyperbook",
  },
]
`;
